RESOLVED FIXED15384
Div does not notice when grandparent changes height
https://bugs.webkit.org/show_bug.cgi?id=15384
Summary Div does not notice when grandparent changes height
Eric Seidel (no email)
Reported 2007-10-05 15:40:29 PDT
Div does not notice when grandparent changes height Try grabbing the resize widget and resizing *only* vertically. (resize: vertical doesn't work correctly either, filed as bug 15383) <div style="border: solid; width: 200px; position: absolute; overflow: hidden; resize: vertical; height: 200px;"><div><div style="height: 50%; background: red"></div></div></div>
Attachments
[WIP] Track and update descendants with percentage heights (7.57 KB, patch)
2008-07-26 18:16 PDT, mitz
no flags
mitz
Comment 1 2008-07-16 21:06:36 PDT
mitz
Comment 2 2008-07-23 22:04:19 PDT
(In reply to comment #1) > <rdar://problem/6082111> The above is not the same as this bug.
mitz
Comment 3 2008-07-26 18:16:55 PDT
Created attachment 22496 [details] [WIP] Track and update descendants with percentage heights Work in progress. May have a significant performance impact.
Dave Hyatt
Comment 4 2008-07-26 19:09:37 PDT
Although I don't really see anything wrong with the patch, I'm not sure how important it is to complicate the code to fix something that is effectively just a quirks mode problem.
mitz
Comment 5 2008-09-16 10:34:51 PDT
Note You need to log in before you can comment on or make changes to this bug.