WebCore/rendering/RenderBox.cpp
@@ -83,6 +83,9 @@ void RenderBox::setStyle(RenderStyle* newStyle)
 
     RenderObject::setStyle(newStyle);
 
+    if (needsLayout() && oldStyle && (oldStyle->height().isPercent() || oldStyle->minHeight().isPercent() || oldStyle->maxHeight().isPercent()))
+        RenderBlock::removePercentHeightDescendant(this);
+
     // The root and the RenderView always paint their backgrounds/borders.
     if (isRoot() || isRenderView())
         setHasBoxDecorations(true);
@@ -185,6 +188,9 @@ void RenderBox::destroy()
     // This must be done before we destroy the RenderObject.
     if (m_layer)
         m_layer->clearClipRect();
+
+    if (style() && (style()->height().isPercent() || style()->minHeight().isPercent() || style()->maxHeight().isPercent()))
+        RenderBlock::removePercentHeightDescendant(this);
 
     RenderObject::destroy();
 }
@@ -1516,8 +1522,10 @@ int RenderBox::calcPercentageHeight(const Length& height)
         // block that may have a specified height and then use it.  In strict mode, this violates the
         // specification, which states that percentage heights just revert to auto if the containing
         // block has an auto height.
-        while (!cb->isRenderView() && !cb->isBody() && !cb->isTableCell() && !cb->isPositioned() && cb->style()->height().isAuto())
+        while (!cb->isRenderView() && !cb->isBody() && !cb->isTableCell() && !cb->isPositioned() && cb->style()->height().isAuto()) {
             cb = cb->containingBlock();
+            cb->addPercentHeightDescendant(this);
+        }
     }
 
     // A positioned element that specified both top/bottom or that specifies height should be treated as though it has a height
@@ -1620,6 +1628,11 @@ int RenderBox::calcReplacedHeightUsing(Length height) const
         case Percent:
         {
             RenderObject* cb = isPositioned() ? container() : containingBlock();
+            while (cb->isAnonymous()) {
+                cb = cb->containingBlock();
+                static_cast<RenderBlock*>(cb)->addPercentHeightDescendant(const_cast<RenderBox*>(this));
+            }
+
             if (cb->isPositioned() && cb->style()->height().isAuto() && !(cb->style()->top().isAuto() || cb->style()->bottom().isAuto())) {
                 ASSERT(cb->isRenderBlock());
                 RenderBlock* block = static_cast<RenderBlock*>(cb);
